--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2017",
-    "sourceMap": true,
+    "declaration": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "outDir": "build",
     "strict": true
   },
   "exclude": [
-    "node_modules", "test"
+    "node_module", "test"
   ]
 }
